[gd_scene load_steps=13 format=3 uid="uid://oa3qkjuqwrp0"]

[ext_resource type="Script" uid="uid://dr011ckt1s7li" path="res://scripts/support_scripts/entity.gd" id="1_8bhn2"]
[ext_resource type="Texture2D" uid="uid://dnsew7nd2l33f" path="res://assets/test_assets/icon.svg" id="1_rrwef"]
[ext_resource type="Script" uid="uid://bxrfkv7bc6ydf" path="res://scripts/support_scripts/state_controller.gd" id="2_21n3x"]
[ext_resource type="Script" uid="uid://dy5sreqcaen4y" path="res://scripts/enemy_scripts/enemy_idle.gd" id="3_4wdx0"]
[ext_resource type="Script" uid="uid://bj1pgmrbpmil3" path="res://scripts/enemy_scripts/enemy_move_2.gd" id="4_rrwef"]
[ext_resource type="Script" uid="uid://b4dv7k0e31r3t" path="res://scripts/enemy_scripts/enemy_dodge.gd" id="5_4wdx0"]
[ext_resource type="Script" uid="uid://ck872vrb6hyd8" path="res://scripts/enemy_scripts/enemy_attack.gd" id="6_8bhn2"]
[ext_resource type="Script" uid="uid://be7w5hi4ld6f7" path="res://scripts/enemy_scripts/enemy_look_at_player.gd" id="6_vssxo"]
[ext_resource type="Script" uid="uid://boqdar6ds0u3b" path="res://scripts/player_scripts/player_knockback.gd" id="8_dkigd"]
[ext_resource type="Script" uid="uid://ctji1uhflb465" path="res://scripts/enemy_scripts/enemy_teleport.gd" id="9_60dcw"]
[ext_resource type="Script" uid="uid://b5a336e5s4x8w" path="res://scripts/enemy_scripts/enemy_pickup_powerup.gd" id="10_6ndrt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rrwef"]
radius = 80.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
safe_margin = 15.0
script = ExtResource("1_8bhn2")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.300051, 0.236805, 1)
rotation = 1.5708
scale = Vector2(0.726562, 0.671875)
texture = ExtResource("1_rrwef")

[node name="enemy_hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
rotation = 1.5708
scale = Vector2(0.726562, 0.671875)
shape = SubResource("CircleShape2D_rrwef")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="state_machine_controller" type="Node" parent="." node_paths=PackedStringArray("characterbody", "initial_state")]
script = ExtResource("2_21n3x")
characterbody = NodePath("..")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="state_machine_controller"]
script = ExtResource("3_4wdx0")

[node name="Move" type="Node" parent="state_machine_controller" node_paths=PackedStringArray("powerup_timer", "nav", "point_to_player_ray", "enemy_to_player_ray", "state_machine_controller_node")]
script = ExtResource("4_rrwef")
pause_seconds = 0.2
go_to_dodge_timer = 2.0
powerup_timer = NodePath("speed_powerup_timer")
nav = NodePath("../../NavigationAgent2D")
point_to_player_ray = NodePath("random_point_to_player_ray")
enemy_to_player_ray = NodePath("../../enemy_to_player_ray")
state_machine_controller_node = NodePath("..")

[node name="random_point_to_player_ray" type="RayCast2D" parent="state_machine_controller/Move"]
modulate = Color(0, 0.594996, 0.613567, 1)
top_level = true

[node name="speed_powerup_timer" type="Timer" parent="state_machine_controller/Move"]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="Dodge" type="Node" parent="state_machine_controller" node_paths=PackedStringArray("nav", "move_dest_ray")]
script = ExtResource("5_4wdx0")
speed = 2000.0
nav = NodePath("../../NavigationAgent2D")
move_dest_ray = NodePath("../../move_destination_raycast")
target_reached_distance = 150.0

[node name="Attack" type="Node" parent="state_machine_controller" node_paths=PackedStringArray("state_machine_controller_node", "enemy_to_player_ray")]
script = ExtResource("6_8bhn2")
state_machine_controller_node = NodePath("..")
enemy_to_player_ray = NodePath("../../enemy_to_player_ray")
go_to_shoot_state_timer = 0.5
attack_windup_timer_duration = 0.01

[node name="knockback" type="Node" parent="state_machine_controller" node_paths=PackedStringArray("entity_instance", "state_machine_controller_instance")]
script = ExtResource("8_dkigd")
entity_instance = NodePath("../..")
state_machine_controller_instance = NodePath("..")

[node name="Teleport" type="Node" parent="state_machine_controller" node_paths=PackedStringArray("check_teleport_pos_ray")]
script = ExtResource("9_60dcw")
check_teleport_pos_ray = NodePath("check_teleport_position")

[node name="check_teleport_position" type="RayCast2D" parent="state_machine_controller/Teleport"]
modulate = Color(0, 0.643185, 0.243595, 1)
self_modulate = Color(2.81565e-06, 0.508903, 0.182553, 1)
collision_mask = 4

[node name="melee_attack" type="Node" parent="state_machine_controller"]

[node name="Pickup_powerup" type="Node" parent="state_machine_controller" node_paths=PackedStringArray("state_machine_controller_instance", "nav", "powerup_timer")]
script = ExtResource("10_6ndrt")
go_pickup_powerup_random_chance = 0.99
state_machine_controller_instance = NodePath("..")
nav = NodePath("../../NavigationAgent2D")
powerup_timer = NodePath("powerup_timer")

[node name="powerup_timer" type="Timer" parent="state_machine_controller/Pickup_powerup"]
wait_time = 10.0
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 50.0
radius = 80.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.577629, 0.459409, 0, 1)

[node name="move_destination_raycast" type="RayCast2D" parent="."]
top_level = true
hit_from_inside = true

[node name="enemy_to_player_ray" type="RayCast2D" parent="."]
modulate = Color(0.99226, 0, 0.364457, 1)
top_level = true

[node name="Look_at_player" type="Node" parent="." node_paths=PackedStringArray("body", "enemy_to_player_ray")]
script = ExtResource("6_vssxo")
body = NodePath("..")
enemy_to_player_ray = NodePath("../enemy_to_player_ray")

[connection signal="got_hit" from="." to="state_machine_controller/knockback" method="_on_enemy_got_hit"]
[connection signal="timeout" from="state_machine_controller/Pickup_powerup/powerup_timer" to="state_machine_controller/Pickup_powerup" method="_on_timer_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="state_machine_controller/Move" method="_on_navigation_agent_2d_velocity_computed"]
