[gd_scene load_steps=10 format=3 uid="uid://c8bibno0p31yd"]

[ext_resource type="Script" uid="uid://dr011ckt1s7li" path="res://scripts/support_scripts/entity.gd" id="1_j2f7r"]
[ext_resource type="Texture2D" uid="uid://dnsew7nd2l33f" path="res://assets/test_assets/icon.svg" id="1_xjjvf"]
[ext_resource type="Script" uid="uid://wg4kyxho2lon" path="res://scripts/player_scripts/player_move.gd" id="2_gfahr"]
[ext_resource type="Script" uid="uid://bxrfkv7bc6ydf" path="res://scripts/support_scripts/state_controller.gd" id="3_gfahr"]
[ext_resource type="Script" uid="uid://db4to3nv4681q" path="res://scripts/player_scripts/player_idle.gd" id="4_7vqky"]
[ext_resource type="Script" uid="uid://cne6cycqyygxn" path="res://scripts/player_scripts/player_mouse_look.gd" id="5_u2ccb"]
[ext_resource type="Script" uid="uid://bbtb6daq4omy7" path="res://scripts/player_scripts/player_attack.gd" id="7_8iuoe"]
[ext_resource type="Script" uid="uid://boqdar6ds0u3b" path="res://scripts/player_scripts/player_knockback.gd" id="7_tx6aq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u2ccb"]
radius = 56.0892

[node name="Player" type="CharacterBody2D" groups=["Player"]]
safe_margin = 8.0
script = ExtResource("1_j2f7r")
health = 50

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 2)
rotation = 1.5708
scale = Vector2(0.726562, 0.671875)
texture = ExtResource("1_xjjvf")

[node name="player_hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-3, 2)
rotation = 1.5708
shape = SubResource("CircleShape2D_u2ccb")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="State_controller" type="Node" parent="." node_paths=PackedStringArray("characterbody", "initial_state")]
script = ExtResource("3_gfahr")
characterbody = NodePath("..")
initial_state = NodePath("Idle")

[node name="Move" type="Node" parent="State_controller"]
script = ExtResource("2_gfahr")
player_speed = 700.0

[node name="Dodge" type="Node" parent="State_controller"]

[node name="dodge_cooldown_timer" type="Timer" parent="State_controller/Dodge"]
one_shot = true

[node name="Idle" type="Node" parent="State_controller"]
script = ExtResource("4_7vqky")
decelaration = 6000.0

[node name="Knockback" type="Node" parent="State_controller" node_paths=PackedStringArray("entity_instance", "state_machine_controller_instance")]
script = ExtResource("7_tx6aq")
entity_instance = NodePath("../..")
state_machine_controller_instance = NodePath("..")

[node name="player_camera" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Mouse_look" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("5_u2ccb")
body = NodePath("..")

[node name="Attack" type="Node" parent="." node_paths=PackedStringArray("body", "aim_ray", "attack_cooldown_timer", "input_mode")]
script = ExtResource("7_8iuoe")
body = NodePath("..")
aim_ray = NodePath("../Aim_raycast")
rate_of_fire = 0.5
attack_cooldown_timer = NodePath("Attack_cooldown_timer")
input_mode = NodePath("../Mouse_look")

[node name="Attack_cooldown_timer" type="Timer" parent="Attack"]
one_shot = true

[node name="Aim_raycast" type="RayCast2D" parent="."]
position = Vector2(61, 0)
target_position = Vector2(10000, 0)

[connection signal="got_hit" from="." to="State_controller/Knockback" method="_on_player_got_hit"]
